--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,32 @@
+Changes for 3.4.13
+
+3.4.13rc2 was released as 3.4.13 without any changes
+
+--------------------------------------------------------------------------------
+Changes for 3.4.13rc2
+
+Bug fixes:
+.......PS. [ZBX-14765] fixed vmware incorrect memory release (MVekslers)
+
+--------------------------------------------------------------------------------
+Changes for 3.4.13rc1
+
+New features:
+...G...PS. [ZBX-13730] replaced pcreposix library with pcre, lowered backtracking limit, fixed libevent build issues (yurii)
+
+Bug fixes:
+.......PS. [ZBX-14677] fixed vmware performance counter retrieval on installations with large number of datastores (wiper)
+........S. [ZBX-14697] fixed memory leak in alert manager when connection to database was lost (vso)
+..F....... [ZBX-12293] renamed trigger functions by adding function name at the beginning and removing the operator and "N" and placing operator in a separate field allowing two new operators "<=" and ">=" for selection (Ivo)
+...G...PS. [ZBX-13730] fixed incorrect behavior of zbxregexp library when reusing latest regular expression (yurii)
+.......PS. [ZBX-14593] fixed error message for invalid vmware endpoint (MVekslers)
+........S. [ZBX-14614] fixed trigger dependency link to the template instead of the host during the discovery action (MVekslers)
+...G...... [ZBX-372] added "zone" parameter to proc.num[] item for Solaris (viktors)
+..F....... [ZBX-14631] fixed typo in string: ouf, not out (vasilijs)
+........S. [ZBX-14410] fixed output of information about the error for expressions with functions of triggers or calculated items (MVekslers)
+..F....... [ZBX-14433] fixed several problems in displaying of X axis on the graphs (Sasha)
+
+--------------------------------------------------------------------------------
 Changes for 3.4.12
 
 3.4.12rc1 was released as 3.4.12 without any changes
@@ -1292,6 +1321,23 @@ A......... [ZBX-10030] fixed API action update method request with only "actioni
 A......... [ZBX-10049] fixed optional field validation in drule.update API method (Gunars)
 ..F....PS. [ZBX-10076] fixed text information containing non-ASCII characters being saved incorrectly to IBM DB2 database in case of system locale misconfiguration (gleb, Oleg)
 ..F....... [ZBX-9989] optimized SQL queries for graphs building (Gunars, Sasha)
+
+--------------------------------------------------------------------------------
+Changes for 3.0.21
+
+3.0.21rc1 was released as 3.0.21 without any changes
+
+--------------------------------------------------------------------------------
+Changes for 3.0.21rc1
+
+Bug fixes:
+.......PS. [ZBX-14677] fixed vmware performance counter retrieval on installations with large number of datastores (wiper)
+..F....... [ZBX-12293] renamed trigger functions by adding function name at the beginning and removing the operator and "N" and placing operator in a separate field allowing two new operators "<=" and ">=" for selection (Ivo)
+.......PS. [ZBX-14593] fixed error message for invalid vmware endpoint (MVekslers)
+........S. [ZBX-14614] fixed trigger dependency link to the template instead of the host during the discovery action (MVekslers)
+...G...... [ZBX-372] added "zone" parameter to proc.num[] item for Solaris (viktors)
+........S. [ZBX-14410] fixed output of information about the error for expressions with functions of triggers or calculated items (MVekslers)
+..F....... [ZBX-14433] fixed several problems in displaying of X axis on the graphs (Sasha)
 
 --------------------------------------------------------------------------------
 Changes for 3.0.20
@@ -3270,6 +3316,13 @@ A......... [ZBX-4772] fixed possibility to pass incorrect host status value (Ivo
 ...G...... [ZBX-7413] fixed inconsistency of config file handling for loading and checking userparameters and aliases before starting the daemon (igors)
 ...G...... [ZBX-7412] fixed alias parsing; colon symbols are now supported in alias parameters (Juris)
 ........S. [ZBX-7204] fixed timestamp order of events generated during network discovery (igors)
+
+--------------------------------------------------------------------------------
+Changes for 2.2.24rc1
+
+New features:
+
+Bug fixes:
 
 --------------------------------------------------------------------------------
 Changes for 2.2.23
